--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            username
+twitter:            PierreASM
 facebook:           OKBOOMER from a "https://youtu.be/3ZTqvPei9YI"
 github-url:         username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
