--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "Quelques une de mes réalisations"
 reading_time:       true
 words_per_minute:   200
 logo:               https://i.ibb.co/T19Qvxk/tofglitch.jpg
-background:         https://i.ibb.co/HpqzMPb/2.png
+background:         https://i.ibb.co/YPG5YX2/andres-siimon-BL9op-at-Kxg-unsplash.jpg
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://passamoi.github.io/CONTENT/
