--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Content/Social manager'
 description:        "Quelques une de mes réalisations"
 reading_time:       true
 words_per_minute:   200
-logo:               https://i.ibb.co/T19Qvxk/tofglitch.jpg
+logo:               https://i.ibb.co/qMrVNxq/Artboard-1-copy-2-100.jpg
 background:         https://i.ibb.co/YPG5YX2/andres-siimon-BL9op-at-Kxg-unsplash.jpg
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
